@@ -27,6 +27,8 @@ The following bugs were resolved with this release:
   [32786] nptl: PTHREAD_COND_INITIALIZER compatibility with pre-2.41 versions
   [32810] Crash on x86-64 if XSAVEC disable via tunable
   [32882] tst-audit10 fails with SIGILL on CPUs without AVX
+  [32897] dynamic-link: pthread_getattr_np fails when executable stack
+    tunable is set
 
 Version 2.41
 
